--- a/SLAM/SLAM/MainPage.xaml
+++ b/SLAM/SLAM/MainPage.xaml
@@ -8,14 +8,14 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <!--<StackPanel x:Name="contentPanel" Margin="120,30,0,0">
-            <TextBlock HorizontalAlignment="Left" Text="Hello ENGR 498" FontSize=" = 36"/>
+        <StackPanel x:Name="contentPanel" Margin="120,30,0,0">
+            <TextBlock HorizontalAlignment="Left" Text="Hello World" FontSize="36"/>
             <TextBlock Text="What's your team name?"/>
             <StackPanel x:Name="inputPanel" Orientation="Horizontal" Margin="0,20,0,20">
                 <TextBox x:Name="nameInput" Width="300" HorizontalAlignment="Left"/>
-                <Button x:Name="inputButton" Content="Say &quot;Hello&quot;"/>
+                <Button x:Name="inputButton" Content="Say &quot;Hello&quot;" Click="inputButton_Click"/>
             </StackPanel>
             <TextBlock x:Name="greetingOutput"/>
-        </StackPanel>-->
+        </StackPanel>
     </Grid>
 </Page>
