--- a/SLAM/SLAM/MainPage.xaml
+++ b/SLAM/SLAM/MainPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <!--<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel x:Name="contentPanel" Margin="120,30,0,0">
             <TextBlock HorizontalAlignment="Left" Text="Hello World" FontSize="36"/>
             <TextBlock Text="What's your team name?"/>
@@ -17,5 +17,5 @@
             </StackPanel>
             <TextBlock x:Name="greetingOutput"/>
         </StackPanel>
-    </Grid>
+    </Grid>-->
 </Page>
